# HW2_CPP_KTH

./: .gitignore  CMakeLists.txt
HW2/: HW2.cpp  mpl_writer.hpp
src/: geometry.hpp  main.cpp  quadtree.hpp
src/utils/: mpl_writer.hpp  point_reader.hpp  random_points.hpp
utilities/: mpl_writer.hpp
